# Hash-Embeddings

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/Hash-Embeddings/: __init__.py
src/hash_embeddings/: __init__.py  embedding.py
