[build-system]
requires = ["flit_core > 3.2, <4"]
build-backend = "flit_core.buildapi"


[project]
name = "Hash-Embeddings"
authors = [
    {name = "YannDubs"}
]
maintainers = [
    {name = "Christopher O'Quinn", email = "chrisoquinn.2@gmail.com"}
    ]
readme = "README.md"
license = {text = "docs/source/license.md"}
keywords = [
    "torch",
    "hash",
    "hash-embed"
]

dependencies = ["torch","numpy", "tqdm"]
dynamic = ["version", "description"]
requires_python = ">=3.8"
